@@ -179,6 +179,20 @@ name|LongWritable
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
+name|NullWritable
+import|;
+end_import
+
 begin_class
 annotation|@
 name|description
@@ -228,6 +242,17 @@ name|ByteWritable
 name|a
 parameter_list|)
 block|{
+if|if
+condition|(
+name|a
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
 name|byteWritable
 operator|.
 name|set
@@ -256,6 +281,17 @@ name|ShortWritable
 name|a
 parameter_list|)
 block|{
+if|if
+condition|(
+name|a
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
 name|shortWritable
 operator|.
 name|set
@@ -284,6 +320,17 @@ name|IntWritable
 name|a
 parameter_list|)
 block|{
+if|if
+condition|(
+name|a
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
 name|intWritable
 operator|.
 name|set
@@ -309,6 +356,17 @@ name|LongWritable
 name|a
 parameter_list|)
 block|{
+if|if
+condition|(
+name|a
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
 name|longWritable
 operator|.
 name|set
@@ -334,6 +392,17 @@ name|FloatWritable
 name|a
 parameter_list|)
 block|{
+if|if
+condition|(
+name|a
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
 name|floatWritable
 operator|.
 name|set
@@ -359,6 +428,17 @@ name|DoubleWritable
 name|a
 parameter_list|)
 block|{
+if|if
+condition|(
+name|a
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
 name|doubleWritable
 operator|.
 name|set
